  overhead.

* Allow for the proper display of product options that use text or textarea
  widgets by showing the actual value if a label doesn't exist for the value.

* You can now change the default display type for Matrix widgets (ie if you
  want the default to be seperate widgets instead of single widget) with a line
  in catalog.cfg like this:
	Options Matrix display_type separate

UI
--

* Matrix options editor can now display more than 50 variants via the use of a
  more-list.

* Fix sort order of generated variant codes so that they match the code that is
  ordered from the flypage.

* You can now mark individual options to be treated as "simple options" even
  though the product is set to Matrix options.  This is useful if you have one
  or more options that you don't wish to track for inventory purposes or if you
  want to use a text or textarea widget (which is not possible with matrix
  options).  Requires the addition of an o_simple column to the options table
  for existing catalogs.


Interchange 5.5.1 released on 2007-08-21.

Core
----

* Removed odd formatting from --add entry in interchange manual page.

* Fixed a DoS exploit. A carefully crafted HTTP POST request could cause
  an Interchange page processor to hang until it's killed by Interchange's
  periodic housekeeping routine. If several of these requests are received
  in quick succession then it could be possible to disable all of the page
  processors, rendering Interchange unresponsive for a while. Fixed by
  Kevin Walsh; pointed out by Donald Alexander.

* Removed unused AdminHost global configuration directive.

* In &Vend::Table::DBI::set_row, avoid unwanted expansion of array when we
  have PREFER_NULL fields and number of fields passed is one.

* Added Vend::Swish2 module provided by Brian Miller <brian@endpoint.com>.
  This is superior to Vend::Swish, because instead of the awkward way to
  interface with Swish-e by running the binary it uses the Swish Perl API.
