@@ -264,6 +264,7 @@ code/UI_Tag/update_order_status.tag
 code/UI_Tag/user_merge.tag
 code/UI_Tag/version.coretag
 code/UI_Tag/widget.coretag
+code/UI_Tag/widget_info.coretag
 code/UI_Tag/widget_meta.coretag
 code/UI_Tag/write_relative_file.coretag
 code/UI_Tag/write_shipping.coretag
