@@ -5,12 +5,14 @@
 # the Free Software Foundation; either version 2 of the License, or
 # (at your option) any later version.  See the LICENSE file for details.
 # 
-# $Id: checkbox.widget,v 1.3 2007-03-30 23:40:58 pajamian Exp $
+# $Id: checkbox.widget,v 1.4 2007-11-14 04:50:19 pajamian Exp $
 
 CodeDef checkbox Widget 1
 CodeDef checkbox Description Checkbox
 CodeDef checkbox Help Selection of single/multiple values
+CodeDef checkbox Multiple 1
 CodeDef checkbox MapRoutine Vend::Form::box
 CodeDef check_nbsp Widget 1
 CodeDef check_nbsp Description Checkbox (nbsp)
+CodeDef checkbox Multiple 1
 CodeDef check_nbsp Help Selection of single/multiple values, &nbsp; for spaces
