@@ -5,9 +5,10 @@
 # the Free Software Foundation; either version 2 of the License, or
 # (at your option) any later version.  See the LICENSE file for details.
 # 
-# $Id: multiple.widget,v 1.3 2007-03-30 23:40:58 pajamian Exp $
+# $Id: multiple.widget,v 1.4 2007-11-14 04:50:19 pajamian Exp $
 
 CodeDef multiple Widget 1
 CodeDef multiple Description Select multiple
 CodeDef multiple Help Dropdown list with all options shown 
+CodeDef multiple Multiple 1
 CodeDef multiple MapRoutine Vend::Form::dropdown
